# aladdin

./: .env  .gitignore  README.md  main.py  pyproject.toml  rxconfig.py  test.py
aladdin/: aladdin.py  db.py  styles.py
aladdin/api/: __init__.py  index.py
aladdin/backend/: auth.py
aladdin/backend/models/: news.py
aladdin/components/: antdicon.py  antdx.py  card.py  feishudoc.py  navbar.py  notification.py  pdf.py  sidebar.py
aladdin/models/: data_source.py  entry.py  feed.py  tag.py  yb.py
aladdin/pages/: __init__.py  about.py  antdchat.py  chat.py  feishu.py  index.py  management.py  pdf.py  table.py
aladdin/pages/news/: __init__.py  author.py  entries.py  feeds.py
aladdin/pages/news/mino/: __init__.py  index.py
aladdin/pages/news/news_tag/: __init__.py  index.py
aladdin/pages/news/yb/: __init__.py  index.py
aladdin/pages/news/yb/detail/: index.py
aladdin/services/: ai_service.py  data_service.py  entry_service.py  feed_service.py  mino.py  supabase.py  tag_service.py  yb_service.py
aladdin/services/dataking/: README.md
aladdin/templates/: template.py
aladdin/utils/: img_proxy.py  logger.py
test/: supabase.ipynb
